iam/api/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: iam
  name: iam
spec:
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
      name: iam
    spec:
      containers:
        - image: erfangc/iam:latest
          imagePullPolicy: Always
          name: iam
          ports:
            - containerPort: 8080
              name: spring-boot
      restartPolicy: Always
