iam/api/redis-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: iam-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: iam-redis
spec:
  selector:
    matchLabels:
      app: iam-redis  # has to match .spec.template.metadata.labels
  serviceName: iam-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: iam-redis  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: redis
          image: redis:5.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-volume
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-volume
        annotations:
          volume.beta.kubernetes.io/storage-class: "gp2"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
