iam/api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iam
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /iam
            backend:
              serviceName: iam
              servicePort: 8080
---
